updated notebook file

--- a/hcds-a2-bias.ipynb
+++ b/hcds-a2-bias.ipynb
@@ -6,15 +6,17 @@
    "source": [
     "## A2: Bias in data\n",
     "\n",
-    "#### Project Overview\n",
+    "### Project Overview\n",
     "\n",
-    "The goal of this project is to explore the concept of 'bias' through data by analyzing Wikipedia articles on political figures from a variety of countries. The data will include a dataset of Wikipedia articles, a dataset of country populations, and the predicted article quality score data from a Wikipedia machine learning service.  \n",
+    "The goal of this project is to explore the concept of 'bias' in data by analyzing Wikipedia articles on political figures from different countries.  \n",
     "\n",
-    "The project will quantify the number of Wikipedia pages devoted to politicians, the quality of those articles about politicians, and consider how those measurements vary between countries.  \n",
+    "The data will include a dataset of political articles on Wikipedia, the predicted article quality scores for those articles, and a dataset of country populations.  \n",
     "\n",
-    "The analysis will include a series of visualizations that show:  \n",
-    "  1. The countries with the greatest and least coverage of politicians on Wikipedia compared to their population.  \n",
-    "  2. The countries with the highest and lowest proportion of high quality articles about politicians.  \n",
+    "The analysis will quantify the number of Wikipedia articles devoted to politicians in each country, label the quality of those articles, and consider how those measurements vary between countries.  \n",
+    "\n",
+    "The data visualization will include a series of plots that show:  \n",
+    "  1. The countries with the greatest and the least coverage of politicians on Wikipedia compared to their population sizes.  \n",
+    "  2. The countries with the highest and the lowest proportion of high quality articles about politicians.  \n",
     " "
    ]
   },
@@ -210,12 +212,12 @@
    "source": [
     "\"\"\"\n",
     "The code in this cell reads in the country population data from\n",
-    "the file Population Mid-2015.csv.\n",
-    "When you just read Population Mid-2015.csv, the title becomes\n",
+    "the file population_mid-2015.csv.\n",
+    "When you just read population_mid-2015.csv, the title becomes\n",
     "a single column, to set the second row as the header, header=1.\n",
     "\"\"\"\n",
     "\n",
-    "pop_data = pd.read_csv(\"Population Mid-2015.csv\", skiprows=0,\n",
+    "pop_data = pd.read_csv(\"population_mid-2015.csv\", skiprows=0,\n",
     "                       header=1, sep=\",\", thousands=\",\")\n",
     "pop_data.head()"
    ]
